# acne-project-cookiecutter

./: README.md  cookiecutter.json
{{coociecutter.project_slug}}/: .dvcignore  .gitignore
{{coociecutter.project_slug}}/.dvc/: config
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.project_slug}}/.github/workflows/: pre-commit.yml
