[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "ACNE Data <contact@acne.se>",
]

[tool.poetry.dependencies]
python = ">=3.8.12, <4.0"

[tool.poetry.dev-dependencies]
autoflake = "*"
# flake8 = "*"
isort = "*"
ipykernel = "*"
# mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pytest = "*"
pyupgrade = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'