[tool.poetry]
authors = [
  "ACNE Data <contact@acne.se>",
]
description = "{{ cookiecutter.project_short_description }}"
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.9, < 3.11"

[tool.poetry.dev-dependencies]
notebook = "^6.4.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
include = '\.pyi?$'
target-version = ["py38", "py39", "py310"]
