[tool.poetry]
authors = [
  "ACNE Data <contact@acne.se>",
]
description = "{{ cookiecutter.project_short_description }}"
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dev-dependencies]
notebook = "^6"
pre-commit = "^2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
